Added draw leaf fxn

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@
 cmake_minimum_required(VERSION 3.2)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set (CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra")
 project(opengl_assignment)
 add_executable(testas main.cpp)
 add_executable(lsystem lsystem_basic.cpp)
